# CMake-Ep036

./: CMakeLists.txt  README.adoc
app/: CMakeLists.txt
app/src/: main.cpp
my_lib/: CMakeLists.txt
my_lib/src/: my_lib.cpp
